--- a/frontend/src/main/webapp/tela_cadastro_recebimento.html
+++ b/frontend/src/main/webapp/tela_cadastro_recebimento.html
@@ -43,12 +43,6 @@
             <div class="input-group">
               <input type="text" id="fornecedor" name="fornecedor" class="form-control" autocomplete="off"
                 placeholder="Digite parte do nome, clique botão Buscar." />
-              <!--
-              <button id="btnBuscarFornecedor" name="btnBuscarFornecedor" class="btn btn-outline-secondary"
-                type="button">
-                Buscar
-              </button>
-              -->
               <button id="btnBuscarFornecedor" class="btn btn-outline-secondary" name="btnBuscarFornecedor"
                 type="button">
                 Buscar
@@ -78,8 +72,8 @@
                 type="button">
                 Buscar
               </button>
-              <button id="btnTrocarRecebidoPor" class="btn btn-outline-danger" name="btnTrocarRecebidoPor"
-                type="button" disabled>
+              <button id="btnTrocarRecebidoPor" class="btn btn-outline-danger" name="btnTrocarRecebidoPor" type="button"
+                disabled>
                 Trocar
               </button>
 
@@ -119,29 +113,6 @@
       <div class="card-body">
         <form id="formItemNota" name="formItemNota" novalidate>
 
-          <!-- Linha 1 -->
-          <!--
-          <div class="row">
-
-            <div class="col-md-4 mb-3">
-              <label for="produto" class="form-label">Produto</label>
-              <select id="produto" name="produto" class="form-control" aria-label="Produto">
-                <option value="" disabled selected>Selecione o produto</option>
-              </select>
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <label for="codigoProduto" class="form-label">Código do Produto</label>
-              <input type="text" id="codigoProduto" name="codigoProduto" class="form-control" readonly />
-            </div>
-
-            <div class="col-md-4 mb-3">
-              <label for="descricaoProduto" class="form-label">Descrição do Produto</label>
-              <input type="text" id="descricaoProduto" name="descricaoProduto" class="form-control" readonly />
-            </div>
-
-          </div>
-          -->
           <!-- Linha 2 -->
           <div class="row">
             <!-- Produto como texto + botão Buscar -->
@@ -150,11 +121,6 @@
               <div class="input-group">
                 <input type="text" id="produto" name="produto" class="form-control" autocomplete="off"
                   placeholder="Digite parte do nome, clique botão Buscar." />
-                <!--
-                <button id="btnBuscarProduto" name="btnBuscarProduto" class="btn btn-outline-secondary" type="button">
-                  Buscar
-                </button>
-                -->
                 <button id="btnBuscarProduto" class="btn btn-outline-secondary" name="btnBuscarProduto" type="button">
                   Buscar
                 </button>
@@ -217,10 +183,6 @@
           <div class="text-center mt-3">
             <button id="btnSalvarItem" name="btnSalvarItem" type="button" class="btn btn-success btn-custom">Salvar
               Item</button>
-            <!--
-            <button id="btnNovoItem" name="btnNovoItem" type="button" class="btn btn-warning btn-custom">Novo
-              Item</button>
-            -->
             <button id="btnFinalizarNota" name="btnFinalizarNota" type="button"
               class="btn btn-primary btn-custom">Finalizar Nota</button>
             <button id="btnMenuPrincipal" name="btnMenuPrincipal" type="button"
