--- a/frontend/src/main/webapp/tela_cadastro_recebimento.html
+++ b/frontend/src/main/webapp/tela_cadastro_recebimento.html
@@ -17,10 +17,10 @@
 
 <body>
   <div class="container mt-4 mb-5">
-    <h4 class="mb-2 text-center titulo-cad-recebimento">CADASTRO DE NOTA FISCAL</h4>
 
     <!-- Etapa 1: Dados da Nota Fiscal -->
     <section class="card mb-4">
+      <h4 class="mb-2 mt-2 text-center titulo-cad-recebimento">CADASTRO DE NOTA FISCAL</h4>
       <div class="card-header">1. Dados da Nota Fiscal</div>
       <div class="card-body">
         <div class="row">
@@ -192,8 +192,8 @@
 
         <!-- Lista de Itens Cadastrados -->
         <div class="mt-4 table-container">
-          <table class="table table-striped table-bordered">
-            <thead class="table-light">
+          <table class="table table-bordered table-striped align-middle text-center">
+            <thead class="table-dark">
               <tr>
                 <th>Produto</th>
                 <th>Código</th>
@@ -211,9 +211,6 @@
         </div>
       </div>
     </section>
-
-
-
   </div>
 
   <!-- Modal de Alerta Global -->
