--- a/frontend/src/main/webapp/index.html
+++ b/frontend/src/main/webapp/index.html
@@ -8,13 +8,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/c0d30aa2de.js" crossorigin="anonymous"></script>
   <style>
+    /* Reset e layout básico */
     html,
     body {
       height: 100%;
       margin: 0;
       padding: 0;
       overflow: hidden;
-      /* Desativa scroll up/down */
+
     }
 
     body {
@@ -26,21 +27,36 @@
       flex: 1;
       display: flex;
       overflow: hidden;
-      /* Evita scroll horizontal/vertical */
+
     }
 
-    .sidebar {
-      width: 250px;
-      background-color: #84c3ec;
-      color: #fff;
-      overflow-y: auto;
+    .logo-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem 0;
+    }
+
+    .logo-container img {
+      max-width: 60%;
+      height: auto;
+    }
+
+
+    .logo-divider {
+      height: 2px;
+      width: 100%;
+      background-color: #daafaf;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      margin: 0.5rem 0 1rem 0;
     }
 
     .sidebar a {
-      color: #000000;
+      color: #0d3b66;
       text-decoration: none;
       font-weight: 600;
     }
+
 
     .sidebar a:hover {
       color: #fff;
@@ -48,15 +64,24 @@
       font-weight: 800;
     }
 
+
+    .sidebar {
+      width: 250px;
+      min-width: 250px;
+      max-width: 250px;
+      background-color: #84c3ec;
+      color: #fff;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      padding: 3rem 1rem 1rem 1rem;
+      flex-shrink: 0;
+    }
+
     .sidebar .nav-link.active {
       background-color: #495057;
       color: #fff;
-    }
-
-    .content {
-      flex-grow: 1;
-      padding: 20px;
-      overflow-y: auto;
     }
 
     .sidebar .menu-header {
@@ -65,6 +90,23 @@
       font-weight: bold;
       background-color: #212529;
       text-align: center;
+    }
+
+    .content {
+      flex-grow: 1;
+      padding: 20px;
+      overflow-y: auto;
+    }
+
+    #conteudo-principal {
+      background: url("assets/img/fundo_container_principal.jpeg") no-repeat center center;
+      background-size: cover;
+      min-height: 100vh;
+      padding: 2rem;
+    }
+
+    #img-logo-grande {
+      max-width: 400px;
     }
 
     footer {
@@ -76,34 +118,11 @@
       font-weight: 600;
     }
 
-    .logo-divider {
-      height: 2px;
-      background: linear-gradient(to right, #ffffff33, #ffffffaa, #ffffff33);
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-      pointer-events: none;
-      -webkit-user-select: none;
-      user-select: none;
-    }
-
-    .logo-container {
-      background-color: #edf0f3;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 1rem 0;
-      -webkit-user-select: none;
-      user-select: none;
-      border-radius: 50%;
-      border-color: #92aac2;
-      border-width: 2px;
-      border-style: solid;
-    }
-
-    .logo-container img {
-      max-height: 170px;
-      pointer-events: none;
-      -webkit-user-select: none;
-      user-select: none;
+    .texto-container {
+      font-size: 1.2rem;
+      font-weight: 700;
+      line-height: 1.7;
+      color: #111314;
     }
   </style>
 </head>
@@ -111,127 +130,138 @@
 <body>
   <div class="main-wrapper">
     <nav class="sidebar d-flex flex-column p-2">
-      <!-- ALTERADO: logo e divisória separados da menu-header -->
       <div class="logo-container">
-        <img src="assets/img/logo-fiberguardian.png" alt="FiberGuardian Logo" class="img-fluid mb-2" />
-        <!-- <div class="logo-divider w-100 my-2"></div> -->
+        <img src="assets/img/fiberguardian_simplificado.png" alt="FiberGuardian Logo" class="img-fluid mb-2" />
+        <div class="logo-divider"></div>
       </div>
 
       <!-- Menu começa aqui -->
       <ul class="nav nav-pills flex-column" id="menu">
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#submenu-recebimentos" role="button"
-            aria-expanded="false">Recebimentos</a>
+          <a class="nav-link" data-bs-toggle="collapse" role="button" aria-expanded="false" onclick="return false;"
+            data-bs-target="#submenu-recebimentos">Recebimentos</a>
           <div class="collapse" id="submenu-recebimentos">
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
-                <a class="nav-link" href="#"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_recebimento.html')">Novo Recebimento</a>
+                <a class="nav-link" role="button"
+                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_recebimento.html')">
+                  Novo Recebimento
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_pesquisa_recebimento.html')">Pesquisar
-                  Recebimentos</a>
+                <a class="nav-link" role="button"
+                  onclick="FiberGuardian.Core.carregarPagina('tela_pesquisa_recebimento.html')">
+                  Pesquisa Recebimento
+                </a>
               </li>
             </ul>
           </div>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#submenu-fornecimentos" role="button"
-            aria-expanded="false">Fornecedor</a>
+          <a class="nav-link" data-bs-toggle="collapse" role="button" aria-expanded="false"
+            data-bs-target="#submenu-fornecimentos">Fornecedor</a>
           <div class="collapse" id="submenu-fornecimentos">
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
-                <a class="nav-link" href="#"
+                <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_fornecimento.html')">Novo Fornecedor</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"
+                <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_pesquisa_fornecimento.html')">Pesquisar
                   Fornecedores</a>
               </li>
             </ul>
           </div>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#submenu-produtos" role="button"
-            aria-expanded="false">Produto</a>
+          <a class="nav-link" data-bs-toggle="collapse" role="button" aria-expanded="false"
+            data-bs-target="#submenu-produtos">Produto</a>
           <div class="collapse" id="submenu-produtos">
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
-                <a class="nav-link" href="#"
+                <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_produto.html')">Novo Produto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"
+                <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_pesquisa_produto.html')">Pesquisar
                   Produtos</a>
               </li>
             </ul>
           </div>
         </li>
+
         <li class="nav-item mt-2">
-          <a class="nav-link" data-bs-toggle="collapse" href="#menu-laboratorio" role="button"
-            aria-expanded="false">Laboratório</a>
+          <a class="nav-link" data-bs-toggle="collapse" role="button" aria-expanded="false"
+            data-bs-target="#menu-laboratorio">Laboratório</a>
           <div class="collapse" id="menu-laboratorio">
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
-                <a class="nav-link" href="#">Cadastrar Resultados</a>
+                <a class="nav-link" role="button">Cadastrar Resultados</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Relatórios</a>
+                <a class="nav-link" role="button">Relatórios</a>
               </li>
             </ul>
           </div>
         </li>
 
         <li class="nav-item mt-2">
-          <a class="nav-link" data-bs-toggle="collapse" href="#menu-engenharia" role="button"
-            aria-expanded="false">Engenharia</a>
+          <a class="nav-link" data-bs-toggle="collapse" role="button" aria-expanded="false"
+            data-bs-target="#menu-engenharia">Engenharia</a>
           <div class="collapse" id="menu-engenharia">
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
-                <a class="nav-link" href="#">Cadastrar Parecer</a>
+                <a class="nav-link" role="button">Cadastrar Parecer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Relatórios</a>
+                <a class="nav-link" role="button">Relatórios</a>
               </li>
             </ul>
           </div>
         </li>
 
         <li class="nav-item mt-2">
-          <a class="nav-link" data-bs-toggle="collapse" href="#menu-perfil" role="button" aria-expanded="false">Gestão
+          <a class="nav-link" data-bs-toggle="collapse" role="button" aria-expanded="false"
+            data-bs-target="#menu-perfil">Gestão
             De Usuários</a>
           <div class="collapse" id="menu-perfil">
             <ul class="nav flex-column ms-3">
               <li class="nav-item" id="menuListaUsuarios" data-role-allowed="ADMIN">
-                <a class="nav-link" href="#"
+                <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_lista_cadastro_usuario.html')">Listar Usuarios</a>
               </li>
               <li class="nav-item" id="menuCadastrarUsuario" data-role-allowed="ADMIN">
-                <a class="nav-link" href="#"
+                <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_usuario.html')">Cadastrar Novo Usuário</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"
+                <a class="nav-link" role="button"
                   onclick="FiberGuardian.Core.carregarPagina('tela_alteracao_cadastro_usuario.html')">Alterar Meus
                   Dados</a>
               </li>
             </ul>
           </div>
         </li>
-        <li class="nav-item mt-2"><!--
-          <a class="nav-link" href="#" onclick="FiberGuardian.Core.realizarLogout()">Logout Sistema</a>
-          -->
-          <a class="nav-link" href="#" id="btnLogout">Logout Sistema</a>
+
+        <li class="nav-item mt-2">
+          <a class="nav-link" role="button" id="btnLogout">Logout Sistema</a>
         </li>
       </ul>
     </nav>
 
-    <main class="content" id="conteudo-principal">
-      <h3>Bem-vindo ao FiberGuardian</h3>
-      <p>Selecione uma opção no menu lateral para começar.</p>
+
+    <main class="content d-flex justify-content-center align-items-center text-center" id="conteudo-principal">
+      <div>
+        <!-- Logo colorido -->
+        <img id="img-logo-grande" src="assets/img/logo-fiberguardian.png" alt="Logotipo FiberGuardian"
+          class="img-fluid mb-4">
+
+        <p id="texto-logo-grande" class="lead texto-container">Selecione uma opção no menu lateral para começar</p>
+      </div>
     </main>
   </div>
 
