Pesquisa de notas fiscais WIP

--- a/frontend/src/main/webapp/tela_cadastro_recebimento.html
+++ b/frontend/src/main/webapp/tela_cadastro_recebimento.html
@@ -179,14 +179,16 @@
             <label for="infoRecebimento" class="form-label">Informações Adicionais</label>
             <textarea id="infoRecebimento" name="infoRecebimento" class="form-control" rows="3"></textarea>
           </div>
-
           <div class="text-center mt-3">
-            <button id="btnSalvarItem" name="btnSalvarItem" type="button" class="btn btn-success btn-custom">Salvar
-              Item</button>
-            <button id="btnFinalizarNota" name="btnFinalizarNota" type="button"
-              class="btn btn-primary btn-custom">Finalizar Nota</button>
-            <button id="btnMenuPrincipal" name="btnMenuPrincipal" type="button"
-              class="btn btn-danger btn-custom">Sair</button>
+            <button id="btnSalvarItem" name="btnSalvarItem" type="button" class="btn btn-success btn-custom">
+              <i class="fas fa-save me-2"></i>Salvar Item
+            </button>
+            <button id="btnFinalizarNota" name="btnFinalizarNota" type="button" class="btn btn-primary btn-custom">
+              <i class="fas fa-file-circle-check me-2"></i>Finalizar Nota
+            </button>
+            <button id="btnMenuPrincipal" name="btnMenuPrincipal" type="button" class="btn btn-danger btn-custom">
+              <i class="fas fa-sign-out-alt me-2"></i>Sair
+            </button>
           </div>
         </form>
 
