Querie com filtro Nota Fiscal working, tem que popular a lista no frontend agora

--- a/frontend/src/main/webapp/tela_cadastro_recebimento.html
+++ b/frontend/src/main/webapp/tela_cadastro_recebimento.html
@@ -186,7 +186,7 @@
             <button id="btnFinalizarNota" name="btnFinalizarNota" type="button" class="btn btn-primary btn-custom">
               <i class="fas fa-file-circle-check me-2"></i>Finalizar Nota
             </button>
-            <button id="btnMenuPrincipal" name="btnMenuPrincipal" type="button" class="btn btn-danger btn-custom">
+            <button id="btnSair" name="btnSair" type="button" class="btn btn-danger btn-custom">
               <i class="fas fa-sign-out-alt me-2"></i>Sair
             </button>
           </div>
