Adicionado telas cadastro e pesquisa fornecedor e produto a main base, alterado tela consulta fornecedor

--- a/frontend/src/main/webapp/index.html
+++ b/frontend/src/main/webapp/index.html
@@ -150,7 +150,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_pesquisa_recebimento.html')">
+                  onclick="FiberGuardian.Core.carregarPagina('tela_consulta_recebimento.html')">
                   Pesquisa Recebimento
                 </a>
               </li>
@@ -165,11 +165,11 @@
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_fornecimento.html')">Novo Fornecedor</a>
+                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_fornecedor.html')">Novo Fornecedor</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_pesquisa_fornecimento.html')">Pesquisar
+                  onclick="FiberGuardian.Core.carregarPagina('tela_consulta_fornecedor.html')">Pesquisar
                   Fornecedores</a>
               </li>
             </ul>
@@ -187,7 +187,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" role="button"
-                  onclick="FiberGuardian.Core.carregarPagina('tela_pesquisa_produto.html')">Pesquisar
+                  onclick="FiberGuardian.Core.carregarPagina('tela_consulta_produto.html')">Pesquisar
                   Produtos</a>
               </li>
             </ul>
