--- a/frontend/src/main/webapp/tela_cadastro_recebimento.html
+++ b/frontend/src/main/webapp/tela_cadastro_recebimento.html
@@ -37,7 +37,7 @@
             </div>
           </div>
 
-          <!-- Fornecedor como texto + botão Buscar -->
+          <!-- Fornecedor como texto + botão Buscar Trocar -->
           <div class="col-md-4 mb-3">
             <label for="fornecedor" class="form-label">Fornecedor</label>
             <div class="input-group">
@@ -45,11 +45,11 @@
                 placeholder="Digite parte do nome, clique botão Buscar." />
               <button id="btnBuscarFornecedor" class="btn btn-outline-secondary" name="btnBuscarFornecedor"
                 type="button">
-                Buscar
+                <i class="fas fa-search me-2"></i>Buscar
               </button>
               <button id="btnTrocarFornecedor" class="btn btn-outline-danger" name="btnTrocarFornecedor" type="button"
                 disabled>
-                Trocar
+                <i class="fas fa-exchange-alt me-2"></i>Trocar
               </button>
             </div>
             <!-- Dropdown de resultados para Fornecedor -->
@@ -70,11 +70,11 @@
               -->
               <button id="btnBuscarRecebidoPor" class="btn btn-outline-secondary" name="btnBuscarRecebidoPor"
                 type="button">
-                Buscar
+                <i class="fas fa-exchange-alt me-2"></i>Buscar
               </button>
               <button id="btnTrocarRecebidoPor" class="btn btn-outline-danger" name="btnTrocarRecebidoPor" type="button"
                 disabled>
-                Trocar
+                <i class="fas fa-search me-2"></i>Trocar
               </button>
 
             </div>
@@ -122,11 +122,11 @@
                 <input type="text" id="produto" name="produto" class="form-control" autocomplete="off"
                   placeholder="Digite parte do nome, clique botão Buscar." />
                 <button id="btnBuscarProduto" class="btn btn-outline-secondary" name="btnBuscarProduto" type="button">
-                  Buscar
+                  <i class="fas fa-search me-2"></i>Buscar
                 </button>
                 <button id="btnTrocarProduto" class="btn btn-outline-danger" name="btnTrocarProduto" type="button"
                   disabled>
-                  Trocar
+                  <i class="fas fa-exchange-alt me-2"></i>Trocar
                 </button>
 
               </div>
